Улучшает .gitignore, принимает работу по разметке

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+.DS_Store
+.idea
+.vscode
+*.ai
+*.log
+*.pdf
+*.psd
+*.sublime*
+node_modules/
+npm-debug.*
+source/css/*.css
+source/css/*.map
+source/css/*.css
+source/css/*.map
+build/
+Thumbs.db
+source/img/sprite.svg
 log.html
